--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.7.3",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "resolve": "^1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
