--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
+    "express": "^4.17.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "http": "0.0.1-security",
     "i18next": "^19.8.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -36,6 +38,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "mini-css-extract-plugin": "0.9.0",
+    "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -55,6 +58,8 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
@@ -65,6 +70,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
+    "server": "npx nodemon src/server/index.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
