--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "server": "npx nodemon src/server/index.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "babel": {
     "presets": [
