--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mini-css-extract-plugin": "0.9.0",
     "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "path-to-regexp": "^6.2.0",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -52,6 +53,7 @@
     "react-dom": "^16.14.0",
     "react-i18next": "^11.7.3",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
