--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-watch-typeahead": "0.4.2",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.9.0",
     "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.3",
