--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "lodash": "^4.17.20",
+    "matrix-rotate": "^0.0.2",
     "mini-css-extract-plugin": "0.9.0",
     "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.3",
