--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.2.1",
+    "pre-commit": "^1.2.2",
     "prop-types": "^15.7.2"
   }
 }
