--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "history": "^5.0.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "http": "0.0.1-security",
     "i18next": "^19.8.3",
