--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.14.0",
+    "react-error-overlay": "^6.0.8",
     "react-i18next": "^11.7.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
